German/Lenguajes y compiladores/Lab3/tests/bad/bad01.imp
-- not defined types a, N
method suma (n : a, m : N) returns (r : N)
{
    var n1:N, m1:N
}

